--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="header">
         <div class="head-main">
-            <div class="logo"><img src="./src/img/logo-head.png"></div>
+            <div class="logo"><img src="./src/img/logo-head.png" width="100px"></div>
             <ul class="quick-link" >
               <li><div id="infoTime" style: "margin-left: 50%"> 3/31/2019 11:20:18 PM</div></li>
               <li style="display: none" style="display: none"><div><select id="lang" onInput="switchLanguage();location.reload()" style="display: none">
