--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                             <div style="display:none" id="txAccount"> </div>
                             <ul class="send-list">
                                 <li id="shardfrom"><p class="lit" id="shardFrom">From</p><input type="text" placeholder="" id="txPublicKey" name="txpublickey" readonly="readonly"></li>
-                                <li id="shardto"><p class="lit" id="shardTo">To</p><input type="text" placeholder="0x000..." id="to" name="to" ></li>
+                                <li id="shardto"><p class="lit" id="shardTo">To</p><input type="text" placeholder="0S000..." id="to" name="to" ></li>
                                 <li><p class="lit" id="password">Password</p><input type="password" placeholder="***" id="accountpassWord" name="accountpassword"></li>
                                 <li><p class="lit" id="sendAmount">Amount</p><input type="text" placeholder="0.0" id="amount" name="amount" class="numbersOnly" value="0.0"></li>
-                                <li><img src="./src/img/sendIcon.png"><span id="txamount1">0.00</span>SCDO</li>
+                                <li><img src="./src/img/sendIcon.png" height="35px"><span id="txamount1">0.00</span>SCDO</li>
                                 <li><span class="" id="youWantToSend"></span></li>
                                 <!-- <li><span class="lit" id="youWantToSend">You want to send </span> <span id="txamount2">0</span> SCDO </li> -->
                             </ul>
