adjust img size

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 <li id="shardto"><p class="lit" id="shardTo">To</p><input type="text" placeholder="defualt: 0x000..." id="contractAddress" name="contractAddress" value = ""></li>
                                 <li style="clear:left;margin-right:80px;margin-bottom:15px"><p class="lit" id="password">Password</p><input type="password" placeholder="***" id="contractAccountpassWord" name="contractAccountpassWord"></li>
                                 <li><p class="lit" id="sendAmount">Amount</p><input type="text" placeholder="0.0" id="contractAmount" name="contractAmount" value="0.0"></li>
-                                <li ><img src="./src/img/sendIcon.png"><span id="ctxamount1">0.0</span>SCDO</li>
+                                <li ><img src="./src/img/sendIcon.png" height="35px"><span id="ctxamount1">0.0</span>SCDO</li>
                                 <!-- <li><input class="magic-checkbox" type="checkbox" name="send" id="sendEvery">
                                     <label for="sendEvery">Send everything</label></li> -->
                                 <li><span class="" id="youWantToSend"></span></li>
@@ -329,4 +329,5 @@
 <script src="./src/js/layer.js"></script>
 <script src="./src/js/popup.js"></script>
 <script src="./src/js/qrcode.js"></script>
+<script src="./src/js/contract.js"></script>
 </html>
