adjust img size

--- a/src/html/account-info.html
+++ b/src/html/account-info.html
@@ -70,7 +70,7 @@
                                 <li>To<input type="text" placeholder=""></li>
                                 <li>Password<input type="password" placeholder=""></li>
                                 <li>Amount<input type="text" placeholder=""></li>
-                                <li><img src="../img/sendIcon.png"><span>0.00</span>SCDO</li>
+                                <li><img src="../img/sendIcon.png" height="35px"><span>0.00</span>SCDO</li>
                                 <li>You want to send <span>0 SCDO</span></li>
                             </ul>
                             <h2 class="progress-title">Scdo Fee</h2>
