fix duplicate accounts

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <div class="password">
               <input type="password" class="passwordfield-add lit" id="create-keyfile-password">
             </div>
-            <div class="action">
-              <div class="actionbutton lit" onclick="addKeyfile()" id="createKeyfile"></div>
+            <div class="action" id="createKeyfileD">
+              <div class="actionbutton lit" id="createKeyfile"></div>
             </div>
           </div>
         </div>
